# mini-zk-evm-rollup

./: API.md  INTERVIEW.md  README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
benchmark/: index.ts
components/: BatchList.tsx  Benchmark.tsx  Dashboard.tsx  ProofList.tsx  RollupStatus.tsx  TransactionForm.tsx  TransactionList.tsx  WalletConnect.tsx
contracts/: ZKEVMRollup.sol  hardhat.config.js  package.json
contracts/contracts/: MockSP1Verifier.sol
contracts/scripts/: generate-verifier.js
contracts/test/: ZKEVMRollup.test.js
core/: index.ts
core/batch-processor/: index.ts
core/bridge/: index.ts
core/config/: index.ts
core/executor/: index.ts
core/network/: index.ts
core/proof-generator/: index.ts
core/security/: index.ts
core/sequencer/: index.ts
core/state-manager/: index.ts
core/types/: index.ts
core/utils/: logger.ts
hooks/: useProofs.ts  useTransactions.ts  useZKRollup.ts
lib/: batch-poster.ts  chains.ts  index.ts  rollup-api.ts  rollup-contract.ts  wagmi.ts  zk-rollup.ts
prover/: package.json
prover/src/: prove-batch.ts  prove.ts  prover.ts  verify.ts
sp1-guest/: Cargo.toml  build.rs
sp1-guest/src/: main.rs
src/guest/: lib.rs
types/: index.ts
utils/: format.ts  rollup.ts  zkvm.ts
